--- a/Casgem.PresentationLayer/Casgem.PresentationLayer.csproj
+++ b/Casgem.PresentationLayer/Casgem.PresentationLayer.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Casgem.BusinessLayer\Casgem.BusinessLayer.csproj" />
+    <ProjectReference Include="..\Casgem.DataAccesses\Casgem.DataAccesses.csproj" />
+  </ItemGroup>
+
 </Project>
