--- a/Casgem.PresentationLayer/appsettings.Development.json
+++ b/Casgem.PresentationLayer/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+    },
+  "ConnectionStrings": {
+    "Context": "User ID=postgres;Password=12345;Server=localhost;Port=5432;Database=CasgemUnitOfWork;"
   }
 }
