--- a/Casgem.PresentationLayer/appsettings.json
+++ b/Casgem.PresentationLayer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Context": "User ID=postgres;Password=12345;Server=localhost;Port=5432;Database=CasgemUnitOfWork;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
